# cppApI

./: README.md  convolve.hpp  cxxnewfeature.h  exception.h  jsoncpp以及filesysytem的一般使用方法.h  library_out_api.h  line_fit.hpp  高效的从一个string中用固定符号分隔对象.h
CMakeAPI/: CMakeLists.txt  CMakeLists1.txt  CMakeVariables.txt  ProfessionalCMake.txt  hunter使用统一调用.txt  websockpp库的CMAKE搭建示例.txt
iniFileRead_cross_platform/: CMakeLists.txt  file_reader.cpp  file_reader.hpp  ini_like.txt  main.cpp  readme.txt
