cmake_minimum_required(VERSION 3.10)
set(project_name file_reader)
message(${project_name})
project(${project_name})
#aux_source_directory(. files)
FILE(GLOB files ${CMAKE_SOURCE_DIR}/*.cpp  ${CMAKE_SOURCE_DIR}/*.hpp)
#FILE(GLOB_RECURSE  files ${CMAKE_SOURCE_DIR}/*.cpp  ${CMAKE_SOURCE_DIR}/*.hpp) 
set(CMAKE_CXX_STANDARD 17)
set(THREADS_PREFER_PTHREAD_FLAG ON)
message(${files})
add_executable(${project_name} ${files})
find_package(Threads REQUIRED)
target_link_libraries(${project_name} Threads::Threads)
if(CMAKE_SYSTEM_NAME MATCHES "Linux")
	target_link_libraries(${project_name} stdc++fs) 
endif()
install(TARGETS ${project_name} DESTINATION  ${CMAKE_SOURCE_DIR}) 